# website

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  tailwind.css  vite.config.ts  wrangler.toml
.github/workflows/: deploy.yml
assets/: tailwind.css
freeoxide-reference/: Free Oxide - 3D.html  Free Oxide.html  app.jsx  boot.js  oxide-lattice.js  styles.css
src/: app.html  config.rs  main.rs  router.rs
src/lib/: utils.ts
src/lib/components/activity/: DayHeader.svelte  LogLine.svelte  RegistryRow.svelte  TabBar.svelte
src/lib/components/landing/: About.svelte  BootSequence.svelte  Contribute.svelte  CrtOverlay.svelte  Footer.svelte  HexMark.svelte  Manifesto.svelte  Projects.svelte  ScrollReveal.svelte  Standards.svelte  Statusbar.svelte  TaglineRotator.svelte  Testing.svelte  TweaksPanel.svelte  Typewriter.svelte  Wordmark.svelte
src/lib/components/three/: OxideLattice.svelte
src/lib/components/ui/ascii-rule/: ascii-rule.svelte  index.ts
src/lib/components/ui/badge/: badge.svelte  index.ts
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
src/lib/github/: fetch.spec.ts  fetch.ts  initiative.spec.ts  initiative.ts
src/lib/stores/: theme.svelte.ts
src/routes/: +layout.svelte  +page.svelte  crt-theme.css  layout.css
src/routes/activity/: +page.server.ts  +page.svelte
src/screens/home/: mod.rs
static/: manifest.webmanifest  robots.txt  sitemap.xml
(+23 files in other folders)
